--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -20,6 +20,7 @@ collections: # A list of collections the CMS should be able to edit
     label: "Event" # Used in the UI, ie.: "New Post"
     folder: "source/events" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}.html"
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Description", name: "description", widget: "markdown"}
