--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -26,7 +26,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Location", name: "location", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
-      - {label: "Made possible by", name: "possible-by", widget: "string"}
+      - {label: "Made possible by", name: "possible_by", widget: "string"}
       - {label: "Meetup Link", name: "meetup-link", widget: "string"}
       - name: "City"
         label: "city"
