--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -23,10 +23,11 @@ collections: # A list of collections the CMS should be able to edit
     slug: "{{slug}}.html"
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Description", name: "description", widget: "markdown"}
+      - {label: "Description", name: "body", widget: "markdown"}
       - {label: "Location", name: "location", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
       - {label: "Made possible by", name: "possible_by", widget: "string"}
+      - {label: "Organised by", name: "organised_by", widget: "string"}
       - {label: "Meetup Link", name: "meetup-link", widget: "string"}
       - name: "City"
         label: "city"
