Delete tests & change image folder

--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: cryptominded/cryptobeers # Path to your GitHub repository
   branch: master # Branch to update (master by default)
 
-media_folder: "source/images/" # Folder where user uploaded files should go
+media_folder: "images/" # Folder where user uploaded files should go
 
 collections: # A list of collections the CMS should be able to edit
   - name: "cities" # Used in routes, ie.: /admin/collections/:slug/edit
