--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -4,6 +4,7 @@ backend:
   branch: master # Branch to update (master by default)
 
 media_folder: "source/images/" # Folder where user uploaded files should go
+public_folder: "images/" # The src attribute for uploaded media will begin with /images/uploads
 
 collections: # A list of collections the CMS should be able to edit
   - name: "cities" # Used in routes, ie.: /admin/collections/:slug/edit
